--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,31 @@
 {
-    "name": "alldigitalrewards/skeleton-service",
-    "type": "project",
+    "name": "alldigitalrewards/omni-sdk",
+    "type": "library",
+    "description": "CashStar library.",
+    "homepage": "https://bitbucket.org/alldigitalrewards/omni-sdk",
     "require": {
-        "slim/slim": "^3.9",
-        "slim/twig-view": "^2.3",
-        "jojihere/monolog-fluent": "^1.0"
+        "php" : "~7.0",
+        "guzzlehttp/guzzle": "^6.2",
+        "psr/container": "^1.0",
+        "respect/validation": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.0",
+        "phpunit/phpunit" : "~4.0||~5.0",
         "squizlabs/php_codesniffer": "^2.3"
     },
     "autoload": {
         "psr-4": {
-            "AllDigitalRewards\\Skeleton\\": "app"
+            "AllDigitalRewards\\Omni\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "AllDigitalRewards\\Omni\\": "tests"
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit",
-        "check-style": "vendor/bin/phpcs -p --standard=phpcs.xml app",
-        "fix-style": "vendor/bin/phpcbf -p --standard=phpcs.xml app"
+        "test": "phpunit",
+        "check-style": "phpcs -p --standard=phpcs.xml --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
+        "fix-style": "phpcbf -p --standard=phpcs.xml --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
     }
 }
